--- a/CycletexBikesMvc/Web.config
+++ b/CycletexBikesMvc/Web.config
@@ -10,8 +10,12 @@
       type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
       requirePermission="false"/>
   </configSections>
-  <connectionStrings>
+  <!--<connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-CycletexBikesMvc-20200504123258.mdf;Initial Catalog=aspnet-CycletexBikesMvc-20200504123258;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+  </connectionStrings>-->
+  <connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-CycletexBikesMvc-CycleTexV1;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
