--- a/CycletexBikesMvc/CycletexBikesMvc.csproj
+++ b/CycletexBikesMvc/CycletexBikesMvc.csproj
@@ -192,6 +192,13 @@
     <Content Include="Content\bootstrap-reboot.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="img\bg-masthead.jpg" />
+    <Content Include="img\bg-showcase-1.jpg" />
+    <Content Include="img\bg-showcase-2.jpg" />
+    <Content Include="img\bg-showcase-3.jpg" />
+    <Content Include="img\testimonials-1.jpg" />
+    <Content Include="img\testimonials-2.jpg" />
+    <Content Include="img\testimonials-3.jpg" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
