--- a/CycletexBikesMvc/Web.config
+++ b/CycletexBikesMvc/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301880
@@ -13,7 +13,10 @@
       providerName="System.Data.SqlClient" />
   </connectionStrings>-->
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-CycletexBikesMvc-CycleTexV1;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-CycletexBikesMvc-CycleTexV1;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+    <add name="CycleTexConnection2ConnectionString" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=CycleTexConnection2;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
