--- a/CycletexBikesMvc/CycletexBikesMvc.csproj
+++ b/CycletexBikesMvc/CycletexBikesMvc.csproj
@@ -180,14 +180,16 @@
     <Compile Include="Models\ApplicationDbContext.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
     <Compile Include="Models\Bike.cs" />
-    <Compile Include="Models\BikeServices.cs" />
+    <Compile Include="Models\BikeServiceNames.cs" />
     <Compile Include="Models\BikeTypes.cs" />
     <Compile Include="Models\Booking.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\DbInitializer.cs" />
+    <Compile Include="Models\DebitCard.cs" />
     <Compile Include="Models\HoursWorked.cs" />
     <Compile Include="Models\Job.cs" />
     <Compile Include="Models\JobParts.cs" />
+    <Compile Include="Models\JobServices.cs" />
     <Compile Include="Models\Labour.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Order.cs" />
@@ -195,11 +197,13 @@
     <Compile Include="Models\Part.cs" />
     <Compile Include="Models\Payment.cs" />
     <Compile Include="Models\PaymentTypes.cs" />
+    <Compile Include="Models\BikeService.cs" />
     <Compile Include="Models\Staff.cs" />
     <Compile Include="Models\Status.cs" />
     <Compile Include="Models\Supplier.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\CreateBookingViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-grid.css" />
