--- a/CycletexBikesMvc/CycletexBikesMvc.csproj
+++ b/CycletexBikesMvc/CycletexBikesMvc.csproj
@@ -199,7 +199,7 @@
     <Compile Include="Models\PaymentTypes.cs" />
     <Compile Include="Models\BikeService.cs" />
     <Compile Include="Models\Staff.cs" />
-    <Compile Include="Models\Status.cs" />
+    <Compile Include="Models\Statuses.cs" />
     <Compile Include="Models\Supplier.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -380,6 +380,7 @@
     <Content Include="Views\Booking\Create.cshtml" />
     <Content Include="Views\Shared\_NavBar.cshtml" />
     <Content Include="Views\Shared\_MastHead.cshtml" />
+    <Content Include="Views\Booking\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
