Add BootstrapNotifications NuGet package.

--- a/CycletexBikesMvc/CycletexBikesMvc.csproj
+++ b/CycletexBikesMvc/CycletexBikesMvc.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Controllers\DebitCardController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Extensions\NotificationExtensions.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -389,6 +390,7 @@
     <Content Include="Views\Shared\_NavBar.cshtml" />
     <Content Include="Views\Shared\_MastHead.cshtml" />
     <Content Include="Views\Booking\Index.cshtml" />
+    <Content Include="Views\Shared\_Notifications.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
