Implement initial ViewAllBookings functionality. Implement full ViewAllCustomerBookings functionality.

--- a/CycletexBikesMvc/CycletexBikesMvc.csproj
+++ b/CycletexBikesMvc/CycletexBikesMvc.csproj
@@ -389,8 +389,8 @@
     <Content Include="Views\Booking\Create.cshtml" />
     <Content Include="Views\Shared\_NavBar.cshtml" />
     <Content Include="Views\Shared\_MastHead.cshtml" />
-    <Content Include="Views\Booking\Index.cshtml" />
     <Content Include="Views\Shared\_Notifications.cshtml" />
+    <Content Include="Views\Booking\ViewAllCustomersBookings.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
