--- a/CycletexBikesMvc/CycletexBikesMvc.csproj
+++ b/CycletexBikesMvc/CycletexBikesMvc.csproj
@@ -391,6 +391,7 @@
     <Content Include="Views\Shared\_MastHead.cshtml" />
     <Content Include="Views\Shared\_Notifications.cshtml" />
     <Content Include="Views\Booking\ViewAllCustomersBookings.cshtml" />
+    <Content Include="Views\Booking\ViewAllBookings.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
