--- a/CycletexBikesMvc/CycletexBikesMvc.csproj
+++ b/CycletexBikesMvc/CycletexBikesMvc.csproj
@@ -205,6 +205,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\CreateBookingViewModel.cs" />
+    <Compile Include="ViewModels\CreateDebitCardViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-datetimepicker.css" />
@@ -394,6 +395,7 @@
     <Content Include="Views\Booking\ViewAllBookings.cshtml" />
     <Content Include="Views\Booking\Details.cshtml" />
     <Content Include="Views\DebitCard\ViewAllCustomersCards.cshtml" />
+    <Content Include="Views\DebitCard\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
