--- a/CycletexBikesMvc/CycletexBikesMvc.csproj
+++ b/CycletexBikesMvc/CycletexBikesMvc.csproj
@@ -399,6 +399,7 @@
     <Content Include="Views\DebitCard\ViewAllCustomersCards.cshtml" />
     <Content Include="Views\DebitCard\Create.cshtml" />
     <Content Include="Views\Payment\MakePayment.cshtml" />
+    <Content Include="Views\Payment\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
