--- a/CycletexBikesMvc/packages.config
+++ b/CycletexBikesMvc/packages.config
@@ -15,6 +15,8 @@
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Logging" version="1.1.2" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Tokens" version="5.1.2" targetFramework="net472" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net472" />
   <package id="Microsoft.Owin" version="4.0.1" targetFramework="net472" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.0.1" targetFramework="net472" />
@@ -32,5 +34,7 @@
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="popper.js" version="1.16.0" targetFramework="net472" />
   <package id="Rotativa" version="1.7.3" targetFramework="net472" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="5.1.2" targetFramework="net472" />
+  <package id="Twilio" version="5.41.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
